2001-07-31  Johan Dahlin  <zilch.am@home.se>

	* src/books-dialog.c (books_button_edit_clicked_cb): If no books
	is installed and Edit book is clicked, return;
	(info_button_ok_clicked_cb): check if book is null. Fixes segfault.

	* configure.in: s/AM_GNU_GETTEXT/AM_GNOME_GETTEXT/. Thanks goes to Yanko Kaneti.

	0.1.0 Released.

	Imported to GNOME CVS.

2001-07-31  Richard Hult  <rhult@codefactory.se>

	* src/main.c (idle_activate_and_search): Eek, data is allowed to
	be NULL so don't g_return_fail.
	(activate_and_search): Only search if search string =! NULL.

	* src/html-widget.c: Include config.h to get i18n working.

	* src/main.c: Clean up a bit and init threads for gnome-vfs.

	* src/main.h: Add search_button to devhelp struct.

	Commented-out code that will be used when the non-autocompletion
	case works:
	* src/ui.c (autocompletion_toggled_cb): Make the search button
	sensitivite if autocompetion is not on.
	(devhelp_create_ui): Set initial sensitivity correctly as well.

2001-07-31  Johan Dahlin  <zilch.am@home.se>

	* configure.in: GTKHTML 0.9.1 & GNOME_VFS 1.0.0 is now reqired.

	* src/install.c (install_book): Remove message.

	* src/bookshelf.c (bookshelf_add_book): Check if the book is
	installed correctly.

	* src/book.c (book_parse): s/name/priv->name/

	* ui/devhelp.png: New version, Thanks Marcus Leyman.
	
2001-07-30  Mikael Hallendal  <micke@codefactory.se>

	* src/book.c (book_node_find): take document as const.

	* src/install.c: include gnome-vfs-mime.h

	* src/bookshelf.c (bookshelf_add_book): fixed error that caused
	non-compile issue.

	* src/book.c: moved book_set_base_url to reside with the other
	non-static functions.
	(book_set_base_url): don't destroy the url argument.
	(book_parse): no need to check for base_url since it's no longer
	used. free the xml_str only if it's not NULL.
	(book_url_get_book_relative): moved to be with the other static
	functions. 

2001-07-30  Johan Dahlin  <zilch.am@home.se>
