@@ -27,8 +27,8 @@
 
 #include <stdio.h>
 #include <libgnomevfs/gnome-vfs.h>
-#include <libxml/parser.h>
-#include <libxml/xmlmemory.h>
+#include <gnome-xml/parser.h>
+#include <gnome-xml/xmlmemory.h>
 #include <libgnome/gnome-defs.h>
 #include <libgnome/gnome-i18n.h>
 #include "function-database.h"
